# opnDOC

./: .gitignore  README.md  README_DEPLOY.md  RELEASE_INSTRUCTIONS.md  memory_backends.py  pyproject.toml  realai_local_controller.py  requirements.txt  settings.gradle  test_memory_backends.py  test_realai_local_controller.py
.github/workflows/: pypy.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/iamomnishropbot/opndoc/: BrainDataBridge.kt
app/src/main/java/com/iamomnishropbot/opndoc/ui/wave/: WaveBackground.kt  WaveColorPickerDialog.kt  WaveDefaults.kt  WaveDemoActivity.kt  WaveScreen.kt  WaveUiState.kt  WaveViewModel.kt
opndoc_local_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rust-backend/: Cargo.toml
rust-backend/src/: lib.rs
